<resources>
    <string name="app_name">My Application</string>
    <string name="welcomeSign">Welcome back</string>
    <string name="signIn">sign in to access your account</string>
    <string name="emailStatement">Enter your email</string>
    <string name="passwordStatement">Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="nextButton">Next</string>
    <string name="registerLink">New member? </string>
    <string name="register">Register Now</string>
    <string name="login">login ></string>
    <string name="page_name">Signup</string>
    <string name="getStarted">Get Started</string>
    <string name="freeAccount">by creating a free account</string>
    <string name="fullName">Full Name</string>
    <string name="email">Valid Email</string>
    <string name="phone">Phone Number</string>
    <string name="password">Strong Password</string>
    <string name="tnC">By checking the box you agree to our Term and Conditions</string>
    <string name="member">Already a member?</string>
    <string name="loginRedirect">Log in</string>
</resources>